# themis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test.ipynb
data/: README.md
notebooks/: test.ipynb
src/: holc.py  uv_test.py
